test/js/node/test/parallel/test-stream-base-typechecking.js.log.txt
 7 |   0,
 8 |   common.mustCall(() => {
 9 |     const client = net.connect(
10 |       server.address().port,
11 |       common.mustCall(() => {
12 |         assert.throws(
                    ^
AssertionError: Expected values to be strictly deep-equal:
+ actual - expected

  {
+   code: 'ERR_UNKNOWN_ENCODING',
+   message: 'Unknown encoding: buffer',
-   code: 'ERR_INVALID_ARG_TYPE',
-   message: 'Second argument must be a buffer',
    name: 'TypeError'
  }
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-base-typechecking.js:12:16
      at emit (node:events:83:48)
      at open (node:net:103:9)

Bun v1.1.34-debug+b186f0ba7 (macOS arm64)
